--- a/comments/templates/comments/comments.html
+++ b/comments/templates/comments/comments.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Отзывы клиентов</title>
+    <title>Компания "Квант" О компании</title>
 </head>
 {% include 'base.html' %}
 {% load static %}
@@ -41,6 +41,6 @@
         {% endif %}
     </span>
 </div>
-<button formaction="new_comment">Оставить отзыв</button>
+<a class="but" href="/comments/new_comment/">Оставить отзыв</a>
 </body>
 </html>
