--- a/k/templates/about.html
+++ b/k/templates/about.html
@@ -1,11 +1,12 @@
 {% include 'base.html' %}
 {% block "header" %}{% endblock %}
+<title>Компания "Квант" О компании</title>
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static '/k/about.css' %}">
 <body>
-    <p>
+    <h3>
         	Компьютерная и цифровая техника
-    </p>
+    </h3>
     <div>
         Компания «Квант» является официальным партнером крупнейших  фирм-производителей компьютеров ,
         серверов и цифровой техники: DEPO, Desten Computers, XEROX. Наша цель-способствовать развитию
@@ -18,9 +19,9 @@
         предпочтения. Основные принципы, которыми мы руководствуемся , являются взаимовыгодное сотрудничество,
         тесные связи и настраиваемые взаимоотношения со своими клиентами и партнерами.
     </div>
-    <p>
+    <h3>
         	Лицензионное программное обеспечение
-    </p>
+    </h3>
     <div>
         Наша компания более 15 лет работает в сфере консультирования и последующей продажи лицензионного
         программного обеспечения. Сертифицированные специалисты нашей компании помогут Вам подобрать
@@ -28,9 +29,9 @@
         официальным партнером ведущих производителей ПО: Basealt, Microsoft, Kaspersky, Dr.Web, Esset,
         Corel, Adobe и других компаний.
     </div>
-    <p>
+    <h3>
         	Системы кондиционирования
-    </p>
+    </h3>
     <div>
         На протяжении 18 лет наша компания успешно занимается разработкой решений, поставкой и монтажем
         систем кондиционирования и вентиляции. Опытные инженеры помогут Вам подобрать, правильно разместить
@@ -41,25 +42,25 @@
         Сегодня, когда экологическое состояние окружающей среды ухудшается с каждым годом, важно заботиться
         о том воздухе, которым мы дышим дома и на рабочем месте и лучше всего доверить эту заботу профессионалам.
     </div>
-    <p>
+    <h3>
         	Монтаж локальных сетей и мини- АТС
-    </p>
+    </h3>
     <div>
         Благодаря многолетнему опыту проектирования и монтажа локальных сетей и мини-АТС, а также
         высококвалифицированному инженерному составу, мы поможем Вам создать информационную среду, наиболее
         качественно удовлетворяющую Ваши потребности в надежно защищенной, гибкой и высокопроизводительной
         системе коллективной работы.
     </div>
-    <p>
+    <h3>
         	Бытовая техника
-    </p>
+    </h3>
     <div>
         Как одно из приятных дополнений, мы предлагаем нашим клиентам широкий ассортимент бытовой техники,
         которую привозим под заказ. Наши цены ниже чем в гипермаркетах и приятно Вас удивят.
     </div>
-    <p>
+    <h3>
         	Визуализация конференцзалов
-    </p>
+    </h3>
     <div>
         Современный интерьер конференц-зала или зала заседаний – это высокотехнологичный и сложный комплекс,
         где существует строгая увязка всех элементов с функциональным назначением интерьера. Камеры наблюдения,
@@ -68,17 +69,17 @@
         стопроцентную отдачу от работы в этом интерьере. Выполняя дизайн проект интерьера конференц-зала или
         зала заседаний, мы, прежде всего, разрабатываем функциональное назначении данного интерьера.
     </div>
-    <p>
+    <h3>
         	Ремонт офисного и компьютерного оборудования
-    </p>
+    </h3>
     <div>
         Высококвалифицированные инженеры ООО «Квант», имеющие многолетний опыт работы , проведут диагностику
         и ремонт Вашей техники. Мы предлагаем услуги по выездному ремонту или при не возможности его, доставку
         неисправной техники в наш Сервисный центр и отремонтированной обратно Заказчику.
     </div>
-    <p>
+    <h3>
         	Заправка, восстановление картриджей
-    </p>
+    </h3>
     <div>
         Выполняем заправку картриджей только высококачественными и проверенными на совместимость тонерами для
         лазерных принтеров, что обеспечивает отличное качество печати и многократное использование одного и того
