--- a/k/templates/service.html
+++ b/k/templates/service.html
@@ -1,28 +1,29 @@
 {% include 'base.html' %}
 {% block "header" %}{% endblock %}
+<title>Компания "Квант" Услуги</title>
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static '/k/service.css' %}">
 <body>
-<p>
+<h3>
     	Монтаж локальных сетей и мини- АТС
-</p>
+</h3>
 <div>Благодаря многолетнему опыту проектирования и монтажа локальных сетей и мини-АТС,
     а так же высококвалифицированному инженерному составу, мы поможем Вам создать информационную среду,
     наиболее качественно удовлетворяющую Ваши потребности в надежно защищенной ,гибкой
     и высокопроизводительной системе коллективной работы.
 </div>
-<p>
+<h3>
     	Ремонт офисного и компьютерного оборудования
-</p>
+</h3>
 <div>
     Высококвалифицированные инженеры ООО «Квант», имеющие многолетний опыт работы ,
     проведут диагностику и ремонт Вашей техники. Мы предлагаем услуги по выездному
     ремонту или при не возможности его, доставку неисправной  техники в наш Сервисный
     центр и отремонтированной обратно Заказчику.
 </div>
-<p>
+<h3>
     	Заправка, восстановление картриджей
-</p>
+</h3>
 <div>
     Выполняем заправку картриджей только высококачественными и проверенными на совместимость тонерами
     для лазерных принтеров, что обеспечивает отличное качество печати и многократное использование одного
@@ -31,4 +32,5 @@
     картридж в течение 10-15 минут. Также вы можете воспользоваться услугами нашей службы доставки,
     сотрудники которой приедут к Вам, заберут, заправят  и привезут назад ваши картриджи.
 </div>
+<a class="but" href="/service/new_demand">Оставить заявку</a>
 </body>
