--- a/goods/templates/goods/index.html
+++ b/goods/templates/goods/index.html
@@ -1,4 +1,5 @@
 {% include 'base.html' %}
+<title>Компания "Квант" Товары</title>
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static '/goods/index.css' %}">
 {% if goods_list %}
