--- a/k/static/k/about.css
+++ b/k/static/k/about.css
@@ -1,3 +1,3 @@
 body {font-family: Geneva, Arial, Helvetica, sans-serif;}
-p {font-size:20px; padding-left:20px; padding-right:20px; text-indent:30px}
-div {font-size:15px; padding-left:20px; padding-right:20px; text-indent:30px}
+h3 {position:relative; left:30px}
+div {position:relative; left:10px; font-size:15px; font-weight: 500; padding-left:20px; padding-right:20px; text-indent:30px}
