--- a/k/static/k/home.css
+++ b/k/static/k/home.css
@@ -1,1 +1,4 @@
-li {padding:10px; font-family: Geneva, Arial, Helvetica, sans-serif; font-size:20px}
+li {
+padding:0px; font-family: Geneva, Arial, Helvetica, sans-serif;
+font-size:20px; position:relative; left:30 px
+}
