--- a/k/static/k/service.css
+++ b/k/static/k/service.css
@@ -1,3 +1,4 @@
 body {font-family: Geneva, Arial, Helvetica, sans-serif;}
-p {font-size:20px; padding-left:20px; padding-right:20px; text-indent:30px}
+h3 {position:relative; left:30px}
 div {font-size:15px; padding-left:20px; padding-right:20px; text-indent:30px}
+.but {position:relative; left:30px; top:30px}
