--- a/k/templates/home.html
+++ b/k/templates/home.html
@@ -1,19 +1,20 @@
 {% include 'base.html' %}
 {% block "header" %}{% endblock %}
+<title>Компания "Квант"</title>
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static '/k/home.css' %}">
 <body>
     <ul>
-        <li>Компьютерная и офисная техника</li>
-        <li>Лицензионное программное обеспечение</li>
-        <li>Антивирусное ПО</li>
-        <li>Расходные материалы</li>
-        <li>Системы кондиционирования</li>
-        <li>Видеокамеры и системы видеонаблюдения</li>
-        <li>Визуализация конференц-залов</li>
-        <li>Шлагбаумы и турникеты</li>
-        <li>Бытовая техника</li>
-        <li>Ремонт офисного и компьютерного оборудования</li>
-        <li>Заправка, восстановление картриджей</li>
+        <li><h3>Компьютерная и офисная техника</h3></li>
+        <li><h3>Лицензионное программное обеспечение</h3></li>
+        <li><h3>Антивирусное ПО</h3></li>
+        <li><h3>Расходные материалы</h3></li>
+        <li><h3>Системы кондиционирования</h3></li>
+        <li><h3>Видеокамеры и системы видеонаблюдения</h3></li>
+        <li><h3>Визуализация конференц-залов</h3></li>
+        <li><h3>Шлагбаумы и турникеты</h3></li>
+        <li><h3>Бытовая техника</h3></li>
+        <li><h3>Ремонт офисного и компьютерного оборудования</h3></li>
+        <li><h3>Заправка, восстановление картриджей</h3></li>
     </ul>
 </body>
