--- a/goods/templates/goods/goods.html
+++ b/goods/templates/goods/goods.html
@@ -33,7 +33,7 @@
             </li>
         {% empty %}
              <li>
-                 пока нет товароы
+                 пока нет товаров
              </li>
         {% endfor %}
     </ul>
