--- a/k/static/k/about.css
+++ b/k/static/k/about.css
@@ -1,3 +1,3 @@
 body {font-family: Geneva, Arial, Helvetica, sans-serif;}
-h3 {position:relative; left:30px}
-div {position:relative; left:10px; font-size:15px; font-weight: 500; padding-left:20px; padding-right:20px; text-indent:30px}
+h3 {text-align: center}
+div {padding: 10px; position:relative; left:10px; font-size:15px; font-weight: 500; padding-left:60px; padding-right:60px; text-indent:30px}
