--- a/k/static/k/home.css
+++ b/k/static/k/home.css
@@ -1,4 +1,8 @@
+ul {position: relative; left: 60px}
+
 li {
 padding:0px; font-family: Geneva, Arial, Helvetica, sans-serif;
-font-size:20px; position:relative; left:30 px
+font-size:20px;
 }
+
+h3 {}
