--- a/goods/templates/goods/categories4.html
+++ b/goods/templates/goods/categories4.html
@@ -40,8 +40,25 @@
     </li>
     {% endfor %}
 </ul>
+        <div class="pagination">
+            <span class="step-links">
+                {% if page.has_previous %}
+                <a href="?page=1">&laquo; первая</a>
+                <a href="?page={{ page.previous_page_number }}">предыдущая</a>
+                {% endif %}
+
+            <span class="current">
+            Страница {{ page.number }} из {{ page.paginator.num_pages }}.
+            </span>
+
+                {% if page.has_next %}
+                <a href="?page={{ page.next_page_number }}">следующая</a>
+                <a href="?page={{ page.paginator.num_pages }}">последняя &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
 <ul class="good">
-    {% for id, name, article, catalog_number, cat1, cat2, cat3 in goods %}
+    {% for id, name, article, catalog_number, cat1, cat2, cat3 in page.object_list %}
     <li id="g">
         {{ name }}
     </li>
